ManifestK8S/cmc-ts-edoc-core-apigateway-tchq-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["10.107.243.125"],"port":80,"protocol":"HTTP","serviceName":"edocman-tchq-dev:cmc-ts-edoc-core-apigateway-tchq-dev-service","ingressName":"edocman-tchq-dev:cmc-ts-edoc-core-apigateway-tchq-dev-ingress","hostname":"cmc.ts.apigateway","path":"/","allNodes":false}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/proxy-body-size":"8m","nginx.ingress.kubernetes.io/proxy-buffer-size":"128k"},"name":"cmc-ts-edoc-core-apigateway-tchq-dev-ingress","namespace":"edocman-tchq-dev"},"spec":{"rules":[{"host":"cmc.ts.apigateway","http":{"paths":[{"backend":{"serviceName":"cmc-ts-edoc-core-apigateway-tchq-dev-serv [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
  creationTimestamp: "2021-10-28T01:49:39Z"
  generation: 1
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
          f:nginx.ingress.kubernetes.io/backend-protocol: {}
          f:nginx.ingress.kubernetes.io/proxy-body-size: {}
          f:nginx.ingress.kubernetes.io/proxy-buffer-size: {}
      f:spec:
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-10-28T01:49:39Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
    manager: rancher
    operation: Update
    time: "2021-10-28T01:50:07Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: nginx-ingress-controller
    operation: Update
    time: "2021-11-24T04:19:31Z"
  name: cmc-ts-edoc-core-apigateway-tchq-dev-ingress
  namespace: edocman-tchq-dev
  resourceVersion: "44327397"
  selfLink: /apis/extensions/v1beta1/namespaces/edocman-tchq-dev/ingresses/cmc-ts-edoc-core-apigateway-tchq-dev-ingress
  uid: 7b529a28-80db-4ebe-ba15-24dc73a6f38d
spec:
  rules:
  - host: cmc.ts.redis
    http:
      paths:
      - backend:
          serviceName: 	redis-tchq-master
          servicePort: 6379
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 10.107.243.125
